<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#007E7C7C"
    tools:context=".MyProfile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/photo"
                android:layout_width="270dp"
                android:layout_height="270dp"
                android:layout_marginTop="32dp"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:scrollbarSize="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/profpic" />

            <TextView
                android:id="@+id/name"
                android:layout_width="362dp"
                android:layout_height="57dp"
                android:layout_marginTop="32dp"
                android:scrollbarSize="10dp"
                android:text="@string/name"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                app:layout_constraintEnd_toEndOf="@+id/photo"
                app:layout_constraintStart_toStartOf="@+id/photo"
                app:layout_constraintTop_toBottomOf="@+id/photo" />

            <androidx.cardview.widget.CardView
                android:layout_width="368dp"
                android:layout_height="288dp"
                android:layout_marginTop="32dp"
                android:scrollbarSize="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="25dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="false"
                app:layout_constraintEnd_toEndOf="@+id/name"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/name">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/track"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/laila_light"
                            android:text="@string/track"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textStyle="bold"
                            android:typeface="monospace" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="18dp" />

                        <TextView
                            android:id="@+id/country"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/laila_light"
                            android:text="@string/Country"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textStyle="bold"
                            android:typeface="monospace" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="18dp" />

                        <TextView
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autoLink="email"
                            android:fontFamily="@font/laila_light"
                            android:linksClickable="true"
                            android:text="@string/Email"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textStyle="bold"
                            android:typeface="monospace" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="18dp" />

                        <TextView
                            android:id="@+id/phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autoLink="phone"
                            android:fontFamily="@font/laila_light"
                            android:linksClickable="true"
                            android:text="@string/Phone"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textStyle="bold"
                            android:typeface="monospace" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="18dp" />

                        <TextView
                            android:id="@+id/slack"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/laila_light"
                            android:text="@string/Slack"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textStyle="bold"
                            android:typeface="monospace" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="18dp" />

                        <TextView
                            android:id="@+id/web"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autoLink="web"
                            android:fontFamily="@font/laila_light"
                            android:linksClickable="true"
                            android:text="@string/Website"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textStyle="bold"
                            android:typeface="monospace" />
                    </LinearLayout>
                </ScrollView>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>